--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -25,13 +25,19 @@
 
 body {
   font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, var(--secondary-color), var(--accent-light));
+  background: linear-gradient(
+    135deg,
+    var(--secondary-color),
+    var(--accent-light)
+  );
   color: var(--text-color);
   text-align: center;
   margin: 0;
 }
 
-#login-page, #thank-you, #voting-pages {
+#login-page,
+#thank-you,
+#voting-pages {
   background-color: var(--card-bg);
   max-width: 600px;
   margin: 3rem auto;
@@ -44,26 +50,25 @@ body {
   position: relative;
   display: none;
 }
-.nss-logo-wrapper{
+.nss-logo-wrapper {
   max-width: 200px;
   display: inline-block;
 }
-.p-heading{
+.p-heading {
   margin-top: 0;
   font-size: 1.5rem;
   border-bottom: 2px solid var(--primary-color);
   padding-bottom: 0.5rem;
   margin-bottom: 1rem;
- 
 }
-.p-heading .ph-red{
+.p-heading .ph-red {
   color: var(--danger-color);
 }
 
-.p-heading .ph-yellow{
+.p-heading .ph-yellow {
   color: var(--warning-color);
 }
-.p-heading .ph-green{
+.p-heading .ph-green {
   color: var(--primary-color);
 }
 
@@ -78,7 +83,10 @@ body {
 
 #modal-background {
   position: fixed;
-  top: 0; left: 0; width: 100%; height: 100%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(5px);
   z-index: 999;
@@ -88,7 +96,8 @@ body {
 #skip-warning {
   background: var(--accent-light);
   position: fixed;
-  top: 50%; left: 50%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   z-index: 1000;
   border: 1px solid var(--warning-color);
@@ -151,7 +160,8 @@ label {
   margin-bottom: 8px;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="password"] {
   padding: 10px;
   width: 80%;
   border: 2px solid var(--border-color);
@@ -162,7 +172,8 @@ input[type="text"] {
   transition: border-color 0.3s;
 }
 
-input[type="text"]:focus {
+input[type="text"]:focus,
+input[type="password"]:focus {
   border-color: var(--primary-color);
 }
 
@@ -193,14 +204,20 @@ button:hover {
   align-items: center;
   justify-content: center;
   position: absolute;
-  top: 0; left: 0; right: 0; bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   z-index: 1000;
   display: none;
 }
 #spinner::before {
   content: "";
   position: fixed;
-  top: 0; left: 0; right: 0; bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(5px);
   z-index: -1;
@@ -275,13 +292,13 @@ input[type="radio"] {
   max-width: 1000px;
   margin: 0 auto;
   display: none;
-  width: 100%;
 }
-#admin-access{
-  text-align: center; margin-top: 20px;
+#admin-access {
+  text-align: center;
+  margin-top: 20px;
   display: none;
 }
-#admin-access-btn{
+#admin-access-btn {
   background-color: var(--warning-color);
 }
 #admin-panel h1 {
@@ -392,7 +409,7 @@ input[type="radio"] {
 .candidate-s {
   width: 100%;
 }
-#thank-you{
+#thank-you {
   display: none;
 }
 .candidate-img {
@@ -407,7 +424,7 @@ input[type="radio"] {
 }
 
 /* Countdown */
-#countdown-container{
+#countdown-container {
   padding-bottom: 1rem;
 }
 #countdown-container h2#countdown-label {
@@ -444,9 +461,13 @@ input[type="radio"] {
   overflow: hidden;
 }
 
-
 @media screen and (max-width: 524px) {
-  #login-page, #thank-you, #voting-pages {
+  #login-page,
+  #thank-you,
+  #voting-pages {
     margin-top: 0;
+  }
+  #admin-panel {
+    padding: 0 20px;
   }
 }
