--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -135,7 +135,7 @@ body {
 
 .next {
   width: 100%;
-  margin-top: 1rem;
+  margin-top: 2rem;
 }
 
 h1 {
@@ -231,7 +231,9 @@ button:hover {
 }
 .candidate-row {
   display: flex;
-  gap: 10px;
+  gap: 5px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .candidate {
@@ -242,7 +244,7 @@ button:hover {
   border: 2px solid var(--border-color);
   padding: 15px;
   border-radius: 10px;
-  width: 100%;
+  flex-basis: 40%;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.05);
 }
 .candidate.selected {
@@ -251,10 +253,9 @@ button:hover {
 }
 .candidate img {
   width: 100px;
-  height: 100px;
   object-fit: cover;
-  border-radius: 50%;
-  border: 3px solid var(--primary-color);
+  border-radius: 70%;
+  /* border: 3px solid var(--warning-color); */
   margin-bottom: 10px;
 }
 
@@ -469,5 +470,8 @@ input[type="radio"] {
   }
   #admin-panel {
     padding: 0 20px;
+  }
+  .candidate {
+    width: 100%;
   }
 }
